--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,7 @@ services:
   api:
     build:
       context: ./api
+    image: josefkliment/api:latest
     container_name: api
     ports:
       - "8000:8000"
@@ -9,15 +10,12 @@ services:
   frontend:
     build:
       context: ./nginx
-      
+    image: josefkliment/frontend:latest
     container_name: frontend
-
     ports:
       - "7777:7777"
-
     volumes:
       - ./nginx/frontend:/usr/share/nginx/html
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-
     depends_on:
       - api
