--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,16 +18,28 @@ jobs:
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
-        
-    - name: Login to GHCR
+
+    - name: Log in to GHCR
       uses: docker/login-action@v2
       with:
         registry: ghcr.io
         username: ${{ secrets.GHCR_USERNAME }}
         password: ${{ secrets.GHCR_TOKEN }}
-        
-    - name: Build Docker images with Compose
-      run: docker compose build
 
-    - name: Push Docker images with Compose
-      run: docker compose push
+    - name: Build API image
+      run: |
+        docker build -t josefkliment/api:latest -t ghcr.io/klimejo22/api:latest ./api
+
+    - name: Push API image
+      run: |
+        docker push josefkliment/api:latest
+        docker push ghcr.io/klimejo22/api:latest
+
+    - name: Build Frontend image
+      run: |
+        docker build -t josefkliment/frontend:latest -t ghcr.io/klimejo22/frontend:latest ./nginx
+
+    - name: Push Frontend image
+      run: |
+        docker push josefkliment/frontend:latest
+        docker push ghcr.io/klimejo22/frontend:latest
