--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,6 +9,8 @@ services:
     container_name: api
     ports:
       - "8000:8000"
+    depends_on:
+      - postgres  
 
   frontend:
     build:
@@ -25,3 +27,25 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
     depends_on:
       - api
+      - postgres
+  postgres:
+    build:
+      context: ./postgres
+      tags:
+        - josefkliment/postgres:latest
+        - ghcr.io/klimejo22/postgres:latest
+    image: josefkliment/postgres:latest
+    container_name: postgres
+    enviroment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: currencydata   
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+      - ./postgres/init.sql:/docker-entrypoint-initdb.d/init.sql:ro 
+    ports:
+      - "5432:5432"
+    entrypoint:
+      - 
+volumes:
+  pgdata:
