--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,11 +1,5 @@
 FROM nginx:alpine
 
-COPY ../scripts/wait-for-it.sh /wait-for-it.sh
+COPY nginx.conf /etc/nginx/nginx.conf
 
-RUN chmod +x /wait-for-it.sh
-
-COPY nginx/nginx.conf /etc/nginx/nginx.conf
-
-COPY nginx/frontend/ /usr/share/nginx/html/
-
-CMD ["/wait-for-it.sh", "api:8000", "--", "nginx", "-g", "daemon off;"]
+COPY frontend/ /usr/share/nginx/html/
