--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,3 +1,4 @@
+version: "3.8"
 services:
   api:  # Stejne jako u ps
     build:
@@ -10,7 +11,13 @@ services:
     ports:
       - "8000:8000"
     depends_on:
-      - postgres  
+      postgres:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/healthCheck"]
+      interval: 10s
+      timeout: 20s
+      retries: 5
 
   frontend:
     build:
@@ -26,8 +33,10 @@ services:
       - ./nginx/frontend:/usr/share/nginx/html
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
     depends_on:
-      - api
-      - postgres
+      api:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
 
   postgres: # Pridat health check aby se api nacetlo az po tom co pude ps ready
     image: postgres:17
@@ -41,6 +50,11 @@ services:
       - ./postgres/init.sql:/docker-entrypoint-initdb.d/init.sql:ro 
     ports:
       - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -d currencydata -U postgres"]
+      interval: 10s
+      timeout: 20s
+      retries: 5
 
 volumes:
   pgdata:
