--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -37,6 +37,12 @@ services:
         condition: service_healthy
       postgres:
         condition: service_healthy
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:7777"]
+      interval: 5s
+      timeout: 3s
+      retries: 3
+      start_period: 5s
 
   postgres: # Pridat health check aby se api nacetlo az po tom co pude ps ready
     image: postgres:17
@@ -52,8 +58,8 @@ services:
       - "5432:5432"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -d currencydata -U postgres"]
-      interval: 5s
-      timeout: 5s
+      interval: 10s
+      timeout: 3s
       retries: 5
 
 volumes:
