Bezici verze alloy a loki (stale nefunkcni)

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -81,6 +81,7 @@ services:
     volumes:
       - ./dashboards:/var/lib/grafana/dashboards
       - ./provisioning:/etc/grafana/provisioning
+      - grafana_data:/var/lib/grafana
     environment:
       - GF_SECURITY_ADMIN_USER=admin
       - GF_SECURITY_ADMIN_PASSWORD=Abcdef0
@@ -88,28 +89,33 @@ services:
       - default
     depends_on:
       - prometheus
-      # - loki
+      - loki
 
-  # loki:
-  #   image: grafana/loki:2.9.3
-  #   container_name: loki
-  #   ports:
-  #     - "3100:3100"
-  #   command: -config.file=/etc/loki/local-config.yaml
+  loki:
+    image: grafana/loki:2.9.4
+    container_name: loki
+    ports:
+      - "3100:3100"
+    command: -config.file=/etc/loki/local-config.yaml
+    volumes:
+      - ./loki/loki-config.yaml:/etc/loki/local-config.yaml
+      - loki_data:/loki
 
-  # alloy:
-  #   image: grafana/alloy:latest
-  #   container_name: alloy
-  #   volumes:
-  #     - ./alloy/config.alloy:/etc/alloy/config.yaml
-  #     - /var/log:/var/log:ro
-  #     - /var/lib/docker/containers:/var/lib/docker/containers:ro
-  #     - /var/run/docker.sock:/var/run/docker.sock
-  #   ports:
-  #     - "7070:7070"
-  #   command: run /etc/alloy/config.alloy  
+  alloy:
+    image: grafana/alloy:v1.8.3
+    container_name: alloy
+    user: root
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - ./alloy/alloy-config.alloy:/etc/alloy/config.alloy
+    command: ["run", "/etc/alloy/config.alloy"]
+    ports:
+      - "12345:12345"
+    depends_on:
+      - loki
 
 volumes:
   pgdata:
   grafana_data:
   prometheus_data:
+  loki_data:
