--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,8 +5,11 @@ http {
     default_type  application/octet-stream;
 
     server {
-        listen 7777;
+        listen 443 ssl;
         server_name localhost;
+
+        ssl_certificate /etc/nginx/ssl/cert.pem;
+        ssl_certificate_key /etc/nginx/ssl/key.pem;
 
         root /usr/share/nginx/html;
         index index.html;
@@ -17,6 +20,18 @@ http {
 
         location /api/ {
             proxy_pass http://api:8000/;
+        }
+    }
+
+    server {
+        listen 444 ssl;
+        server_name localhost;
+
+        ssl_certificate /etc/nginx/ssl/cert.pem;
+        ssl_certificate_key /etc/nginx/ssl/key.pem;
+
+        location / {
+            proxy_pass http://grafana:3000;
         }
     }
 }
