--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,8 +8,8 @@ services:
         - ghcr.io/klimejo22/api:latest
     image: josefkliment/api:latest
     container_name: api
-    ports:
-      - "8000:8000"
+    # ports:
+    #   - "8000:8000"
     depends_on:
       postgres:
         condition: service_healthy
@@ -28,7 +28,8 @@ services:
     image: josefkliment/frontend:latest
     container_name: frontend
     ports:
-      - "7777:7777"
+      - "443:443"
+      - "444:444"
     volumes:
       - ./nginx/frontend:/usr/share/nginx/html
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
@@ -38,7 +39,7 @@ services:
       postgres:
         condition: service_healthy
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:7777"]
+      test: ["CMD", "curl", "-f", "https://localhost:443"]
       interval: 2s
       timeout: 1s
       retries: 3
@@ -54,8 +55,8 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
       - ./postgres/init.sql:/docker-entrypoint-initdb.d/init.sql:ro 
-    ports:
-      - "5432:5432"
+    # ports:
+    #   - "5432:5432"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -d currencydata -U postgres"]
       interval: 2s
@@ -68,16 +69,16 @@ services:
     volumes:
       - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
       - prometheus_data:/prometheus
-    ports:
-      - "9090:9090"
+    # ports:
+    #   - "9090:9090"
     networks:
       - default
 
   grafana:
     image: grafana/grafana
     container_name: grafana
-    ports:
-      - "3001:3000"
+    # ports:
+      # - "3001:3000"
     volumes:
       - ./dashboards:/var/lib/grafana/dashboards
       - ./provisioning:/etc/grafana/provisioning
@@ -94,8 +95,8 @@ services:
   loki:
     image: grafana/loki:2.9.4
     container_name: loki
-    ports:
-      - "3100:3100"
+    # ports:
+    #   - "3100:3100"
     command: -config.file=/etc/loki/local-config.yaml
     volumes:
       - ./loki/loki-config.yaml:/etc/loki/local-config.yaml
@@ -109,8 +110,8 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - ./alloy/alloy-config.alloy:/etc/alloy/config.alloy
     command: ["run", "/etc/alloy/config.alloy"]
-    ports:
-      - "12345:12345"
+    # ports:
+    #   - "12345:12345"
     depends_on:
       - loki
 
