--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,6 +14,8 @@ http {
         root /usr/share/nginx/html;
         index index.html;
 
+        error_page  404  /404.html;
+
         location / {
             try_files $uri $uri/ =404;
         }
