Redirect z HTTP na HTTPS

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,6 +5,13 @@ http {
     default_type  application/octet-stream;
 
     server {
+        listen 80;
+        server_name localhost;
+
+        return 301 https://$host$request_uri;
+    }
+
+    server {
         listen 443 ssl;
         server_name localhost;
 
