Kompletni zmeny konfigurace nginx serveru z 28.05.2025 i s komentarema

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,14 +4,59 @@ http {
     include       mime.types;
     default_type  application/octet-stream;
 
+    ### ------ Nova nastaveni z 28.05. ------ ###
+    # Ochranne headery proti utokum
+    add_header X-Content-Type-Options nosniff;     
+    add_header X-Frame-Options DENY;   
+    add_header X-XSS-Protection "1; mode=block";
+    add_header Referrer-Policy no-referrer-when-downgrade;
+
+    # CSP vzany z tohoto sample souboru: https://gist.github.com/plentz/6737338 na radku 31 (pozn.: kdyz je to odkomentovane tak nefunguje grafana)
+    # add_header Content-Security-Policy "
+    # default-src 'self'; \
+    # script-src 'self' 'unsafe-inline' 'unsafe-eval' https://ssl.google-analytics.com https://assets.zendesk.com https://connect.facebook.net; \
+    # img-src 'self' https://ssl.google-analytics.com https://s-static.ak.facebook.com https://assets.zendesk.com; \
+    # style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://assets.zendesk.com; \
+    # font-src 'self' https://themes.googleusercontent.com; \
+    # frame-src https://assets.zendesk.com https://www.facebook.com https://s-static.ak.facebook.com https://tautt.zendesk.com; \
+    # object-src 'none';
+    # " always;
+
+    # GZIP
+    gzip on;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml;
+    gzip_min_length 256;
+
+    # Mapovani realne IP klienta pro to aby Limitovani requestu fungovalo tak jak ma
+    map $http_x_forwarded_for $client_real_ip {
+        default $http_x_forwarded_for;
+        ""      $remote_addr;
+    }
+
+    # Limit requestu za sekundu
+    limit_req_zone $client_real_ip zone=limit:10m rate=10r/s;
+
+    # Vlastní logovací formát se skutečnou IP
+    log_format realip '$client_real_ip - $remote_user [$time_local] "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent"';
+    access_log /var/log/nginx/access.log realip;
+
+    # Logovani erroru
+    error_log /var/log/nginx/error.log warn;
+    
+    # http:// server na presmerovani na https://
     server {
+
         listen 80;
         server_name localhost;
 
         return 301 https://$host$request_uri;
     }
 
+    # Primarni https:// server
     server {
+        # Pouzivani https:// misto predesleho http://
         listen 443 ssl;
         server_name localhost;
 
@@ -21,17 +66,23 @@ http {
         root /usr/share/nginx/html;
         index index.html;
 
+        # Pridani 404 page
         error_page  404  /404.html;
 
         location / {
             try_files $uri $uri/ =404;
+            
         }
 
         location /api/ {
             proxy_pass http://api:8000/;
+
+            # Limit requestu za sekundu
+            limit_req zone=limit burst=20 nodelay;
         }
     }
 
+    # Grafana integrovana do nginx serveru
     server {
         listen 444 ssl;
         server_name localhost;
@@ -41,6 +92,11 @@ http {
 
         location / {
             proxy_pass http://grafana:3000;
+
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 }
