--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -77,6 +77,7 @@ services:
       - ./provisioning:/etc/grafana/provisioning
       - grafana_data:/var/lib/grafana
     environment:
+      - GF_SERVER_ROOT_URL=https://localhost:444/
       - GF_SECURITY_ADMIN_USER=admin
       - GF_SECURITY_ADMIN_PASSWORD=Abcdef0
     networks:
