--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,21 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+    command: >
+      sh -c '
+        uvicorn api:app --host 0.0.0.0 --port 8000 & 
+        UVICORN_PID=$!;
+
+        echo "Čekám na API, až bude ready...";
+        until curl -sf http://localhost:8000/healthCheck; do
+          echo -n ".";
+          sleep 1;
+        done;
+        echo "\nAPI je ready, volám update endpoint...";
+        curl -sf http://localhost:8000/update;
+
+        wait $UVICORN_PID
+      '
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/healthCheck"]
       interval: 5s
