--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,17 +11,6 @@ http {
     add_header X-XSS-Protection "1; mode=block";
     add_header Referrer-Policy no-referrer-when-downgrade;
 
-    # CSP vzany z tohoto sample souboru: https://gist.github.com/plentz/6737338 na radku 31 (pozn.: kdyz je to odkomentovane tak nefunguje grafana)
-    # add_header Content-Security-Policy "
-    # default-src 'self'; \
-    # script-src 'self' 'unsafe-inline' 'unsafe-eval' https://ssl.google-analytics.com https://assets.zendesk.com https://connect.facebook.net; \
-    # img-src 'self' https://ssl.google-analytics.com https://s-static.ak.facebook.com https://assets.zendesk.com; \
-    # style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://assets.zendesk.com; \
-    # font-src 'self' https://themes.googleusercontent.com; \
-    # frame-src https://assets.zendesk.com https://www.facebook.com https://s-static.ak.facebook.com https://tautt.zendesk.com; \
-    # object-src 'none';
-    # " always;
-
     # GZIP
     gzip on;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml;
@@ -75,10 +64,22 @@ http {
         }
 
         location /api/ {
-            proxy_pass http://api:8000/;
+
+            # CSP vzany z tohoto sample souboru: https://gist.github.com/plentz/6737338 na radku 31
+            add_header Content-Security-Policy "
+            default-src 'self'; \
+            script-src 'self' 'unsafe-inline' 'unsafe-eval' https://ssl.google-analytics.com https://assets.zendesk.com https://connect.facebook.net; \
+            img-src 'self' https://ssl.google-analytics.com https://s-static.ak.facebook.com https://assets.zendesk.com; \
+            style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://assets.zendesk.com; \
+            font-src 'self' https://themes.googleusercontent.com; \
+            frame-src https://assets.zendesk.com https://www.facebook.com https://s-static.ak.facebook.com https://tautt.zendesk.com; \
+            object-src 'none';
+            " always;
 
             # Limit requestu za sekundu
             limit_req zone=limit burst=20 nodelay;
+
+            proxy_pass http://api:8000/;
         }
     }
 
