--- a/.gitignore
+++ b/.gitignore
@@ -128,6 +128,7 @@ celerybeat.pid
 *.sage.py
 
 # Environments
+envs/
 .env
 .venv
 env/
@@ -172,3 +173,7 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+# SSL certificate
+nginx/cert.pem
+nginx/key.pem
